2010-08-04  Sergio Martin <sergio.martin@artica.es>

	* include/styles/pandora.css
	include/functions_reporting.php
	include/functions_ui.php
	include/functions_db.php
	operation/agentes/status_monitor.php
	operation/agentes/estado_agente.php
	operation/agentes/bulbs.php
	operation/agentes/estado_monitores.php
	operation/agentes/group_view.php
	images/status_sets/default/module_no_data.png
	images/status_sets/default/alert_fired.png
	images/status_sets/default/agent_no_monitors.png
	images/status_sets/default/alert_fired_ball.png
	images/status_sets/default/agent_no_monitors_ball.png
	images/status_sets/default/agent_down_ball.png
	images/status_sets/default/agent_down.png: Fixed several modules
	and agents list status to use the new unknown status. Some images was
	changed too for show the same colour than the visual and network maps

2010-08-03  Sergio Martin <sergio.martin@artica.es>

	* include/functions_networkmap.php
	include/functions_db.php: Fixed the networkmaps to do not shows
	the not init modules and get the new unknown status

2010-08-03  Sergio Martin <sergio.martin@artica.es>

	* operation/agentes/estado_ultimopaquete.php: Fixed log4x modules
	check from old id value 30 to new id value 24

2010-08-03  Sergio Martin <sergio.martin@artica.es>

	* pandoradb.sql
	extras/pandoradb_migrate_v3.1_to_v3.2.sql: Added a id_policy_module
	field into agente_modulo table for future use

2010-08-03  Junichi Satoh  <junichi@rworks.jp>

	* godmode/alerts/alert_list.list.php: Fixed a problem alert filtering
	by priority does not work.

2010-08-02  Ramon Novoa  <rnovoa@artica.es>

	* include/pchart_graph.php, include/fgraph.php: Removed title from
	  image charts. Show min, max and avg as part of the image.

2010-08-02  Ramon Novoa  <rnovoa@artica.es>

	* include/functions_reporting.php, include/fgraph.php,
	  include/functions_fsgraph.php, operation/agentes/stat_win.php: Moved
	  min, max and avg information into the chart to make it available to